// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSavedSearches renders 1`] = `
<ProjectSavedSearchContainer
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <ProjectSavedSearches
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
  >
    <SideEffect(DocumentTitle)
      title="Saved Searches - Sentry"
    >
      <DocumentTitle
        title="Saved Searches - Sentry"
      >
        <div>
          <SettingsPageHeading
            noTitleStyles={false}
            title="Saved Searches"
          >
            <Wrapper>
              <div
                className="css-1r5ylk7-Wrapper e1kblvez2"
              >
                <ForwardRef
                  alignItems="center"
                >
                  <Styled(div)
                    alignItems="center"
                  >
                    <div
                      className="css-5ipae5"
                    >
                      <Title
                        styled={false}
                      >
                        <div
                          className="css-1ky52ze-Title e1kblvez0"
                        >
                          <HeaderTitle>
                            <h4
                              className="css-1w8ttcn-HeaderTitle e6lvex72"
                            >
                              Saved Searches
                            </h4>
                          </HeaderTitle>
                        </div>
                      </Title>
                    </div>
                  </Styled(div)>
                </ForwardRef>
              </div>
            </Wrapper>
          </SettingsPageHeading>
          <Panel>
            <Component
              className="css-yahxlu-Panel e1laxa7d0"
            >
              <div
                className="css-yahxlu-Panel e1laxa7d0"
              >
                <PanelHeader
                  disablePadding={true}
                >
                  <Component
                    className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0"
                    disablePadding={true}
                  >
                    <ForwardRef
                      alignItems="center"
                      className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0"
                      justifyContent="space-between"
                    >
                      <Styled(div)
                        alignItems="center"
                        className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0"
                        justifyContent="space-between"
                      >
                        <div
                          className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0 css-v7pzd9"
                        >
                          <ForwardRef
                            flex="1"
                          >
                            <Styled(div)
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                              >
                                <ForwardRef
                                  flex="1"
                                  px={2}
                                >
                                  <Styled(div)
                                    flex="1"
                                    px={2}
                                  >
                                    <div
                                      className="css-16yraqj"
                                    >
                                      Search
                                    </div>
                                  </Styled(div)>
                                </ForwardRef>
                                <ForwardRef
                                  flex="1"
                                >
                                  <Styled(div)
                                    flex="1"
                                  >
                                    <div
                                      className="css-z8nhq7"
                                    >
                                      <InputColumn>
                                        <ForwardRef
                                          flex="1"
                                          justifyContent="center"
                                        >
                                          <Styled(div)
                                            flex="1"
                                            justifyContent="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                            >
                                              My Default
                                            </div>
                                          </Styled(div)>
                                        </ForwardRef>
                                      </InputColumn>
                                      <InputColumn>
                                        <ForwardRef
                                          flex="1"
                                          justifyContent="center"
                                        >
                                          <Styled(div)
                                            flex="1"
                                            justifyContent="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                            >
                                              Team Default
                                            </div>
                                          </Styled(div)>
                                        </ForwardRef>
                                      </InputColumn>
                                      <InputColumn>
                                        <ForwardRef
                                          flex="1"
                                          justifyContent="center"
                                        >
                                          <Styled(div)
                                            flex="1"
                                            justifyContent="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                            >
                                              Remove
                                            </div>
                                          </Styled(div)>
                                        </ForwardRef>
                                      </InputColumn>
                                    </div>
                                  </Styled(div)>
                                </ForwardRef>
                              </div>
                            </Styled(div)>
                          </ForwardRef>
                        </div>
                      </Styled(div)>
                    </ForwardRef>
                  </Component>
                </PanelHeader>
                <PanelBody
                  direction="column"
                  disablePadding={true}
                  flex={false}
                >
                  <div
                    className="css-9vq8an-textStyles"
                  >
                    <SavedSearchRow
                      access={
                        Set {
                          "org:read",
                          "org:write",
                          "org:admin",
                          "org:integrations",
                          "project:read",
                          "project:write",
                          "project:admin",
                          "team:read",
                          "team:write",
                          "team:admin",
                        }
                      }
                      canModify={true}
                      data={
                        Object {
                          "dateCreated": "2017-11-14T02:22:58.026Z",
                          "id": "2",
                          "isDefault": true,
                          "isGlobal": true,
                          "isOrgCustom": false,
                          "isPinned": false,
                          "isPrivate": false,
                          "isUserDefault": false,
                          "name": "Needs Triage",
                          "query": "is:unresolved is:unassigned",
                          "type": 0,
                        }
                      }
                      key="2"
                      onDefault={[Function]}
                      onRemove={[Function]}
                      onUserDefault={[Function]}
                      orgId="org-slug"
                      projectId="project-slug"
                    >
                      <PanelItem
                        alignItems="center"
                        p={0}
                        py={2}
                      >
                        <div
                          className="css-lpkktu-PanelItem eo8n7lk0"
                        >
                          <ForwardRef
                            flex="1"
                            flexDirection="column"
                            px={2}
                          >
                            <Styled(div)
                              flex="1"
                              flexDirection="column"
                              px={2}
                            >
                              <div
                                className="css-5cn9mw"
                              >
                                <SearchTitle>
                                  <div
                                    className="css-225nrx-SearchTitle e1e9fsi50"
                                  >
                                    Needs Triage
                                  </div>
                                </SearchTitle>
                                <code>
                                  is:unresolved is:unassigned
                                </code>
                              </div>
                            </Styled(div)>
                          </ForwardRef>
                          <ForwardRef
                            flex="1"
                          >
                            <Styled(div)
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                              >
                                <InputColumn>
                                  <ForwardRef
                                    flex="1"
                                    justifyContent="center"
                                  >
                                    <Styled(div)
                                      flex="1"
                                      justifyContent="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                      >
                                        <input
                                          checked={false}
                                          name="userDefault"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Styled(div)>
                                  </ForwardRef>
                                </InputColumn>
                                <InputColumn>
                                  <ForwardRef
                                    flex="1"
                                    justifyContent="center"
                                  >
                                    <Styled(div)
                                      flex="1"
                                      justifyContent="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                      >
                                        <input
                                          checked={true}
                                          disabled={false}
                                          name="default"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Styled(div)>
                                  </ForwardRef>
                                </InputColumn>
                                <InputColumn>
                                  <ForwardRef
                                    flex="1"
                                    justifyContent="center"
                                  >
                                    <Styled(div)
                                      flex="1"
                                      justifyContent="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                      >
                                        <Confirm
                                          cancelText="Cancel"
                                          confirmText="Confirm"
                                          disableConfirmButton={false}
                                          disabled={false}
                                          message="Are you sure you want to remove this?"
                                          onConfirm={[Function]}
                                          priority="primary"
                                          stopPropagation={false}
                                        >
                                          <Button
                                            disabled={false}
                                            icon="icon-trash"
                                            onClick={[Function]}
                                            size="small"
                                          >
                                            <StyledButton
                                              aria-disabled={false}
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                              size="small"
                                            >
                                              <Component
                                                aria-disabled={false}
                                                className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                onClick={[Function]}
                                                role="button"
                                                size="small"
                                              >
                                                <button
                                                  aria-disabled={false}
                                                  className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                  onClick={[Function]}
                                                  role="button"
                                                  size="small"
                                                >
                                                  <ButtonLabel
                                                    size="small"
                                                  >
                                                    <Component
                                                      className="css-7ui8bl-ButtonLabel eqrebog1"
                                                      size="small"
                                                    >
                                                      <span
                                                        className="css-7ui8bl-ButtonLabel eqrebog1"
                                                      >
                                                        <Icon
                                                          hasChildren={false}
                                                          size="small"
                                                        >
                                                          <Component
                                                            className="css-ljhpxy-Icon eqrebog2"
                                                            hasChildren={false}
                                                            size="small"
                                                          >
                                                            <span
                                                              className="css-ljhpxy-Icon eqrebog2"
                                                              size="small"
                                                            >
                                                              <StyledInlineSvg
                                                                size="12px"
                                                                src="icon-trash"
                                                              >
                                                                <InlineSvg
                                                                  className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                                  size="12px"
                                                                  src="icon-trash"
                                                                >
                                                                  <StyledSvg
                                                                    className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                                    height="12px"
                                                                    viewBox={Object {}}
                                                                    width="12px"
                                                                  >
                                                                    <svg
                                                                      className="eqrebog3 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                                      height="12px"
                                                                      viewBox={Object {}}
                                                                      width="12px"
                                                                    >
                                                                      <use
                                                                        href="#test"
                                                                        xlinkHref="#test"
                                                                      />
                                                                    </svg>
                                                                  </StyledSvg>
                                                                </InlineSvg>
                                                              </StyledInlineSvg>
                                                            </span>
                                                          </Component>
                                                        </Icon>
                                                      </span>
                                                    </Component>
                                                  </ButtonLabel>
                                                </button>
                                              </Component>
                                            </StyledButton>
                                          </Button>
                                          <Modal
                                            animation={false}
                                            autoFocus={true}
                                            backdrop={true}
                                            bsClass="modal"
                                            dialogComponentClass={[Function]}
                                            enforceFocus={true}
                                            keyboard={true}
                                            manager={
                                              ModalManager {
                                                "add": [Function],
                                                "containers": Array [],
                                                "data": Array [],
                                                "handleContainerOverflow": true,
                                                "hideSiblingNodes": true,
                                                "isTopModal": [Function],
                                                "modals": Array [],
                                                "remove": [Function],
                                              }
                                            }
                                            onHide={[Function]}
                                            renderBackdrop={[Function]}
                                            restoreFocus={true}
                                            show={false}
                                          >
                                            <Modal
                                              autoFocus={true}
                                              backdrop={true}
                                              backdropClassName="modal-backdrop"
                                              containerClassName="modal-open"
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onEntering={[Function]}
                                              onExited={[Function]}
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            />
                                          </Modal>
                                        </Confirm>
                                      </div>
                                    </Styled(div)>
                                  </ForwardRef>
                                </InputColumn>
                              </div>
                            </Styled(div)>
                          </ForwardRef>
                        </div>
                      </PanelItem>
                    </SavedSearchRow>
                    <SavedSearchRow
                      access={
                        Set {
                          "org:read",
                          "org:write",
                          "org:admin",
                          "org:integrations",
                          "project:read",
                          "project:write",
                          "project:admin",
                          "team:read",
                          "team:write",
                          "team:admin",
                        }
                      }
                      canModify={true}
                      data={
                        Object {
                          "dateCreated": "2017-11-14T02:22:58.026Z",
                          "id": "1",
                          "isDefault": false,
                          "isGlobal": false,
                          "isOrgCustom": false,
                          "isPinned": false,
                          "isPrivate": false,
                          "isUserDefault": true,
                          "name": "Unresolved Issues",
                          "query": "is:unresolved",
                          "type": 0,
                        }
                      }
                      key="1"
                      onDefault={[Function]}
                      onRemove={[Function]}
                      onUserDefault={[Function]}
                      orgId="org-slug"
                      projectId="project-slug"
                    >
                      <PanelItem
                        alignItems="center"
                        p={0}
                        py={2}
                      >
                        <div
                          className="css-lpkktu-PanelItem eo8n7lk0"
                        >
                          <ForwardRef
                            flex="1"
                            flexDirection="column"
                            px={2}
                          >
                            <Styled(div)
                              flex="1"
                              flexDirection="column"
                              px={2}
                            >
                              <div
                                className="css-5cn9mw"
                              >
                                <SearchTitle>
                                  <div
                                    className="css-225nrx-SearchTitle e1e9fsi50"
                                  >
                                    Unresolved Issues
                                  </div>
                                </SearchTitle>
                                <code>
                                  is:unresolved
                                </code>
                              </div>
                            </Styled(div)>
                          </ForwardRef>
                          <ForwardRef
                            flex="1"
                          >
                            <Styled(div)
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                              >
                                <InputColumn>
                                  <ForwardRef
                                    flex="1"
                                    justifyContent="center"
                                  >
                                    <Styled(div)
                                      flex="1"
                                      justifyContent="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                      >
                                        <input
                                          checked={true}
                                          name="userDefault"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Styled(div)>
                                  </ForwardRef>
                                </InputColumn>
                                <InputColumn>
                                  <ForwardRef
                                    flex="1"
                                    justifyContent="center"
                                  >
                                    <Styled(div)
                                      flex="1"
                                      justifyContent="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                      >
                                        <input
                                          checked={false}
                                          disabled={false}
                                          name="default"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Styled(div)>
                                  </ForwardRef>
                                </InputColumn>
                                <InputColumn>
                                  <ForwardRef
                                    flex="1"
                                    justifyContent="center"
                                  >
                                    <Styled(div)
                                      flex="1"
                                      justifyContent="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                      >
                                        <Confirm
                                          cancelText="Cancel"
                                          confirmText="Confirm"
                                          disableConfirmButton={false}
                                          disabled={false}
                                          message="Are you sure you want to remove this?"
                                          onConfirm={[Function]}
                                          priority="primary"
                                          stopPropagation={false}
                                        >
                                          <Button
                                            disabled={false}
                                            icon="icon-trash"
                                            onClick={[Function]}
                                            size="small"
                                          >
                                            <StyledButton
                                              aria-disabled={false}
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                              size="small"
                                            >
                                              <Component
                                                aria-disabled={false}
                                                className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                onClick={[Function]}
                                                role="button"
                                                size="small"
                                              >
                                                <button
                                                  aria-disabled={false}
                                                  className="css-dkprmi-StyledButton-getColors eqrebog0"
                                                  onClick={[Function]}
                                                  role="button"
                                                  size="small"
                                                >
                                                  <ButtonLabel
                                                    size="small"
                                                  >
                                                    <Component
                                                      className="css-7ui8bl-ButtonLabel eqrebog1"
                                                      size="small"
                                                    >
                                                      <span
                                                        className="css-7ui8bl-ButtonLabel eqrebog1"
                                                      >
                                                        <Icon
                                                          hasChildren={false}
                                                          size="small"
                                                        >
                                                          <Component
                                                            className="css-ljhpxy-Icon eqrebog2"
                                                            hasChildren={false}
                                                            size="small"
                                                          >
                                                            <span
                                                              className="css-ljhpxy-Icon eqrebog2"
                                                              size="small"
                                                            >
                                                              <StyledInlineSvg
                                                                size="12px"
                                                                src="icon-trash"
                                                              >
                                                                <InlineSvg
                                                                  className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                                  size="12px"
                                                                  src="icon-trash"
                                                                >
                                                                  <StyledSvg
                                                                    className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                                    height="12px"
                                                                    viewBox={Object {}}
                                                                    width="12px"
                                                                  >
                                                                    <svg
                                                                      className="eqrebog3 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                                      height="12px"
                                                                      viewBox={Object {}}
                                                                      width="12px"
                                                                    >
                                                                      <use
                                                                        href="#test"
                                                                        xlinkHref="#test"
                                                                      />
                                                                    </svg>
                                                                  </StyledSvg>
                                                                </InlineSvg>
                                                              </StyledInlineSvg>
                                                            </span>
                                                          </Component>
                                                        </Icon>
                                                      </span>
                                                    </Component>
                                                  </ButtonLabel>
                                                </button>
                                              </Component>
                                            </StyledButton>
                                          </Button>
                                          <Modal
                                            animation={false}
                                            autoFocus={true}
                                            backdrop={true}
                                            bsClass="modal"
                                            dialogComponentClass={[Function]}
                                            enforceFocus={true}
                                            keyboard={true}
                                            manager={
                                              ModalManager {
                                                "add": [Function],
                                                "containers": Array [],
                                                "data": Array [],
                                                "handleContainerOverflow": true,
                                                "hideSiblingNodes": true,
                                                "isTopModal": [Function],
                                                "modals": Array [],
                                                "remove": [Function],
                                              }
                                            }
                                            onHide={[Function]}
                                            renderBackdrop={[Function]}
                                            restoreFocus={true}
                                            show={false}
                                          >
                                            <Modal
                                              autoFocus={true}
                                              backdrop={true}
                                              backdropClassName="modal-backdrop"
                                              containerClassName="modal-open"
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onEntering={[Function]}
                                              onExited={[Function]}
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            />
                                          </Modal>
                                        </Confirm>
                                      </div>
                                    </Styled(div)>
                                  </ForwardRef>
                                </InputColumn>
                              </div>
                            </Styled(div)>
                          </ForwardRef>
                        </div>
                      </PanelItem>
                    </SavedSearchRow>
                  </div>
                </PanelBody>
              </div>
            </Component>
          </Panel>
        </div>
      </DocumentTitle>
    </SideEffect(DocumentTitle)>
  </ProjectSavedSearches>
</ProjectSavedSearchContainer>
`;

exports[`ProjectSavedSearches renders empty 1`] = `
<ProjectSavedSearchContainer
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <ProjectSavedSearches
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
  >
    <SideEffect(DocumentTitle)
      title="Saved Searches - Sentry"
    >
      <DocumentTitle
        title="Saved Searches - Sentry"
      >
        <div>
          <SettingsPageHeading
            noTitleStyles={false}
            title="Saved Searches"
          >
            <Wrapper>
              <div
                className="css-1r5ylk7-Wrapper e1kblvez2"
              >
                <ForwardRef
                  alignItems="center"
                >
                  <Styled(div)
                    alignItems="center"
                  >
                    <div
                      className="css-5ipae5"
                    >
                      <Title
                        styled={false}
                      >
                        <div
                          className="css-1ky52ze-Title e1kblvez0"
                        >
                          <HeaderTitle>
                            <h4
                              className="css-1w8ttcn-HeaderTitle e6lvex72"
                            >
                              Saved Searches
                            </h4>
                          </HeaderTitle>
                        </div>
                      </Title>
                    </div>
                  </Styled(div)>
                </ForwardRef>
              </div>
            </Wrapper>
          </SettingsPageHeading>
          <Panel>
            <Component
              className="css-yahxlu-Panel e1laxa7d0"
            >
              <div
                className="css-yahxlu-Panel e1laxa7d0"
              >
                <PanelHeader
                  disablePadding={true}
                >
                  <Component
                    className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0"
                    disablePadding={true}
                  >
                    <ForwardRef
                      alignItems="center"
                      className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0"
                      justifyContent="space-between"
                    >
                      <Styled(div)
                        alignItems="center"
                        className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0"
                        justifyContent="space-between"
                      >
                        <div
                          className="css-18sl05e-PanelHeader-getPadding e1p8v8nv0 css-v7pzd9"
                        >
                          <ForwardRef
                            flex="1"
                          >
                            <Styled(div)
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                              >
                                <ForwardRef
                                  flex="1"
                                  px={2}
                                >
                                  <Styled(div)
                                    flex="1"
                                    px={2}
                                  >
                                    <div
                                      className="css-16yraqj"
                                    >
                                      Search
                                    </div>
                                  </Styled(div)>
                                </ForwardRef>
                                <ForwardRef
                                  flex="1"
                                >
                                  <Styled(div)
                                    flex="1"
                                  >
                                    <div
                                      className="css-z8nhq7"
                                    >
                                      <InputColumn>
                                        <ForwardRef
                                          flex="1"
                                          justifyContent="center"
                                        >
                                          <Styled(div)
                                            flex="1"
                                            justifyContent="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                            >
                                              My Default
                                            </div>
                                          </Styled(div)>
                                        </ForwardRef>
                                      </InputColumn>
                                      <InputColumn>
                                        <ForwardRef
                                          flex="1"
                                          justifyContent="center"
                                        >
                                          <Styled(div)
                                            flex="1"
                                            justifyContent="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                            >
                                              Team Default
                                            </div>
                                          </Styled(div)>
                                        </ForwardRef>
                                      </InputColumn>
                                      <InputColumn>
                                        <ForwardRef
                                          flex="1"
                                          justifyContent="center"
                                        >
                                          <Styled(div)
                                            flex="1"
                                            justifyContent="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                            >
                                              Remove
                                            </div>
                                          </Styled(div)>
                                        </ForwardRef>
                                      </InputColumn>
                                    </div>
                                  </Styled(div)>
                                </ForwardRef>
                              </div>
                            </Styled(div)>
                          </ForwardRef>
                        </div>
                      </Styled(div)>
                    </ForwardRef>
                  </Component>
                </PanelHeader>
                <PanelBody
                  direction="column"
                  disablePadding={true}
                  flex={false}
                >
                  <div
                    className="css-9vq8an-textStyles"
                  >
                    <EmptyStateWarning
                      small={false}
                    >
                      <EmptyStreamWrapper
                        data-test-id="empty-state"
                      >
                        <div
                          className="css-1ff2mrl-EmptyStreamWrapper ernlsnc0"
                          data-test-id="empty-state"
                        >
                          <HeroIcon
                            size="54"
                            src="icon-circle-exclamation"
                          >
                            <Component
                              className="css-1j03cl-HeroIcon e1h7wyrq0"
                              size="54"
                              src="icon-circle-exclamation"
                            >
                              <InlineSvg
                                className="css-1j03cl-HeroIcon e1h7wyrq0"
                                size="54"
                                src="icon-circle-exclamation"
                              >
                                <StyledSvg
                                  className="css-1j03cl-HeroIcon e1h7wyrq0"
                                  height="54"
                                  viewBox={Object {}}
                                  width="54"
                                >
                                  <svg
                                    className="e1h7wyrq0 css-196iyqp-StyledSvg-HeroIcon e2idor0"
                                    height="54"
                                    viewBox={Object {}}
                                    width="54"
                                  >
                                    <use
                                      href="#test"
                                      xlinkHref="#test"
                                    />
                                  </svg>
                                </StyledSvg>
                              </InlineSvg>
                            </Component>
                          </HeroIcon>
                          <p>
                            There are no saved searches for this project.
                          </p>
                        </div>
                      </EmptyStreamWrapper>
                    </EmptyStateWarning>
                  </div>
                </PanelBody>
              </div>
            </Component>
          </Panel>
        </div>
      </DocumentTitle>
    </SideEffect(DocumentTitle)>
  </ProjectSavedSearches>
</ProjectSavedSearchContainer>
`;
